--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
-spring.application.name=ScheduleManagerApp
-spring.datasource.url=jdbc:mysql://localhost:3306/schedule_manager
+spring.application.name=Todo
+spring.datasource.url=jdbc:mysql://localhost:3306/todo
 spring.datasource.username=root
 spring.datasource.password=a123456789
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
